# mr-review-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/github/: auth.py  client.py  comments.py  webhook.py
app/review/: __init__.py  crew.py  guidelines.py  pricing.py  risk.py  schemas.py  service.py  tasks.py
app/storage/: __init__.py  database.py  models.py
docs/: TECHNICAL_DESIGN.md
tests/: test_deepseek_pricing.py  test_github_client.py  test_github_comments.py  test_github_webhook_endpoint.py  test_incremental_review.py  test_review_crew_llm.py  test_risk_classifier.py  test_webhook_signature.py
